--- a/notebooks/icom_contrast_transfer.ipynb
+++ b/notebooks/icom_contrast_transfer.ipynb
@@ -8,7 +8,7 @@
     "---\n",
     "title: iCOM Contrast Transfer\n",
     "authors: [Julie Marie Bekkevold, Georgios Varnavides]\n",
-    "date: 2024/09/30\n",
+    "date: 2024-09-30\n",
     "---"
    ]
   },
@@ -19,12 +19,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib widget\n",
+    "# enable interactive matplotlib\n",
+    "%matplotlib widget \n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.gridspec import GridSpec\n",
-    "import ctf # custom plotting / utils\n",
+    "import ctf # import custom plotting / utils\n",
     "\n",
     "import ipywidgets\n",
     "from IPython.display import display"
@@ -35,31 +36,39 @@
    "id": "fffc2c7f-b101-4129-8d15-f2a0304b5602",
    "metadata": {},
    "source": [
-    "## 4D STEM Simulation of white noise object"
+    "## 4D STEM Simulation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "419ff450-2a29-4f5e-87a7-5cc70648b4c5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# parameters\n",
     "n = 96\n",
-    "q_max = 2\n",
-    "q_probe = 1\n",
-    "sampling = 1 / q_max / 2\n",
-    "reciprocal_sampling = 1 / n / sampling\n",
+    "q_max = 2 # inverse Angstroms\n",
+    "q_probe = 1 # inverse Angstroms\n",
+    "sampling = 1 / q_max / 2 # Angstroms\n",
+    "reciprocal_sampling = 2 * q_max / n # inverse Angstroms\n",
     "\n",
-    "scan_step_size = 1\n",
+    "scan_step_size = 1 # pixels\n",
     "sx = sy = n//scan_step_size\n",
     "phi0 = 1.0"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4a3fb790-6c39-4089-9170-fc2238703aca",
+   "metadata": {},
+   "source": [
+    "### White Noise Potential"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "7174d1df-5672-48e9-9930-888ad39078fe",
    "metadata": {},
    "outputs": [],
@@ -98,29 +107,30 @@
     "    # inverse FFT and remove floating point errors\n",
     "    arr = np.fft.ifft2(arr).real\n",
     "    \n",
-    "    return arr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "9af25db1-5dbc-4ab9-9dae-8d67fb6fa880",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return arr\n",
+    "\n",
     "# potential\n",
     "potential = white_noise_object_2D(n,phi0)\n",
     "complex_obj = np.exp(1j*potential)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "476883e0-f740-4a51-932f-39cf19d23f2b",
+   "metadata": {},
+   "source": [
+    "### Probe"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "71d0b5b8-198d-4602-9d49-9b01fa5829b9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# probe\n",
+    "# we build probe in Fourier space, using a soft aperture\n",
+    "\n",
     "qx = qy = np.fft.fftfreq(n,sampling)\n",
     "q2 = qx[:,None]**2 + qy[None,:]**2\n",
     "q  = np.sqrt(q2)\n",
@@ -133,13 +143,24 @@
     "    ),\n",
     ")\n",
     "\n",
+    "# normalized s.t. np.sum(np.abs(probe_array_fourier)**2) = 1.0\n",
     "probe_array_fourier /= np.sqrt(np.sum(np.abs(probe_array_fourier)**2))\n",
-    "probe_array = np.fft.fft2(probe_array_fourier) / n"
+    "\n",
+    "# we then take the inverse FFT, and normalize s.t. np.sum(np.abs(probe_array)**2) = 1.0\n",
+    "probe_array = np.fft.ifft2(probe_array_fourier) * n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "2406e188-91b1-4f40-a3e3-8e6a137ddec5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "6d620ca7-35bb-4e1c-b34f-02d6e1906e8f",
    "metadata": {},
    "outputs": [],
@@ -156,6 +177,7 @@
     "    col,\n",
     ").reshape((sx,sy,n,n))**2 / n**2\n",
     "\n",
+    "# precompute sum needed for DPC\n",
     "intensities_sum = intensities.sum((-1,-2))"
    ]
   },
@@ -164,12 +186,12 @@
    "id": "afaad444",
    "metadata": {},
    "source": [
-    "## Define Virtual Detectors"
+    "## Virtual Detectors and CoM calculation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "id": "12634cda",
    "metadata": {},
    "outputs": [],
@@ -198,24 +220,8 @@
     "\n",
     "    angular_bins = [np.fft.fftshift((angular_bins == i).astype(\"int\")) for i in range(1,n_angular_bins+1)]\n",
     "    \n",
-    "    return angular_bins"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "565020a2",
-   "metadata": {},
-   "source": [
-    "## Calculate COM and iCOM"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "33e4a137",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return angular_bins\n",
+    "\n",
     "def compute_com_using_virtual_detectors(\n",
     "    corner_centered_intensities,\n",
     "    center_centered_masks,\n",
@@ -258,27 +264,32 @@
    "id": "c7bbb634",
    "metadata": {},
    "source": [
-    "## Compute CTFs"
+    "## Compute CTFs and initial values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "id": "db58b779",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compute the inverse error\n",
+    "# Spatial frequencies\n",
     "kx = ky = np.fft.fftfreq(n,sampling).astype(np.float32)\n",
     "kxa, kya = np.meshgrid(kx, ky, indexing='ij')\n",
     "\n",
     "k2 = kxa**2 + kya**2\n",
     "k = np.sqrt(k2)\n",
     "k2[0, 0] = np.inf\n",
+    "\n",
+    "# iCoM operators\n",
     "kx_op = -1.0j * kxa / k2\n",
     "ky_op = -1.0j * kya / k2\n",
+    "\n",
+    "# Compute the inverse error\n",
     "inverse_error = (k*np.pi/np.sqrt(2))\n",
     "\n",
+    "# Analytical CTF (probe autocorrelation)\n",
     "ctf_analytic = np.real(\n",
     "    np.fft.ifft2(\n",
     "        np.abs(\n",
@@ -289,18 +300,19 @@
     "    )\n",
     ")\n",
     "\n",
+    "# Radially-averaged CTF and SNR\n",
     "q_bins_analytic, I_bins_analytic = ctf.radially_average_ctf(ctf_analytic,(sampling,sampling))\n",
-    "q_bins_analytic_snr, I_bins_analytic_snr = ctf.radially_average_ctf(ctf_analytic*inverse_error,(sampling,sampling))\n",
-    "ctf_analytic_array = np.fft.fftshift(ctf_analytic)"
+    "q_bins_analytic_snr, I_bins_analytic_snr = ctf.radially_average_ctf(ctf_analytic*inverse_error,(sampling,sampling))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "id": "21f2b02c-6a5b-49fb-9682-981192798244",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initial masks and CoM\n",
     "virtual_masks_annular = annular_segmented_detectors(\n",
     "    gpts=(n,n),\n",
     "    sampling=(sampling,sampling),\n",
@@ -333,8 +345,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fa6879d5-7901-43b7-b4ad-5d38058b69e5",
+   "metadata": {},
+   "source": [
+    "## Visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1266a7c2-3375-43d0-997f-e6f464952d99",
+   "metadata": {},
+   "source": [
+    "### Base Plot\n",
+    "\n",
+    "We make the interactive plot using the initial values, and name the artists (imshow, plot) we want to modify later.  \n",
+    "__Note:__ I use 2-98% histogram scaling, and I normalize the values to lie within 0-1 (to avoid having to modify the clims)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 43,
    "id": "45f7df1f-47b6-4754-abe3-6196941ec5a9",
    "metadata": {},
    "outputs": [],
@@ -343,75 +374,99 @@
     "    dpi=72\n",
     "    fig = plt.figure(figsize=(675/dpi,240/dpi),dpi=dpi)\n",
     "\n",
+    "# figure layout\n",
     "gs = GridSpec(2, 5,height_ratios=[3,1],figure=fig)\n",
     "\n",
+    "# detector\n",
     "ax_detector = fig.add_subplot(gs[0, 0])\n",
     "im_detector = ax_detector.imshow(ctf.combined_images_rgb(virtual_masks_annular))\n",
     "ctf.add_scalebar(ax_detector,length=n//4,sampling=reciprocal_sampling,units=r'$q_{\\mathrm{probe}}$')\n",
     "\n",
+    "# analytic CTF\n",
     "ax_ctf_analytic = fig.add_subplot(gs[0, 1])\n",
     "ax_ctf_analytic.imshow(ctf.histogram_scaling(np.flip(ctf_analytic[:n//2,:n//2],axis=None),normalize=True),cmap='turbo')\n",
     "\n",
+    "# annular CTF\n",
     "ax_ctf_annular = fig.add_subplot(gs[0, 2])\n",
     "im_ctf = ax_ctf_annular.imshow(ctf.histogram_scaling(np.flip(ctf_annular[:n//2,:n//2],axis=0),normalize=True),cmap='turbo')\n",
     "\n",
+    "# analytic SNR\n",
     "ax_snr_analytic = fig.add_subplot(gs[0, 3])\n",
     "ax_snr_analytic.imshow(ctf.histogram_scaling(np.flip((ctf_analytic*inverse_error)[:n//2,:n//2],axis=None),normalize=True),cmap='turbo')\n",
     "\n",
+    "# annular SNR\n",
     "ax_snr_annular = fig.add_subplot(gs[0, 4])\n",
     "im_snr = ax_snr_annular.imshow(ctf.histogram_scaling(np.flip((ctf_annular*inverse_error)[:n//2,:n//2],axis=0),normalize=True),cmap='turbo')\n",
     "\n",
+    "# analytic CTF radially-averaged\n",
     "ax_ctf_analytic_rad = fig.add_subplot(gs[1, 1])\n",
     "ax_ctf_analytic_rad.plot(-q_bins_analytic,I_bins_analytic,color='red')\n",
-    "ax_ctf_analytic_rad.set_xlim([-q_max,0])\n",
-    "ax_ctf_analytic_rad.set_ylim([0,1])\n",
     "\n",
+    "# annular CTF radially-averaged\n",
     "ax_ctf_annular_rad = fig.add_subplot(gs[1, 2])\n",
     "plot_ctf = ax_ctf_annular_rad.plot(q_bins_annular,I_bins_annular,color='red')[0]\n",
-    "ax_ctf_annular_rad.set_xlim([0,q_max])\n",
-    "ax_ctf_annular_rad.set_ylim([0,1])\n",
     "\n",
+    "# analytic SNR radially-averaged\n",
     "ax_snr_analytic_rad = fig.add_subplot(gs[1, 3])\n",
     "ax_snr_analytic_rad.plot(-q_bins_analytic_snr,I_bins_analytic_snr,color='red')\n",
-    "ax_snr_analytic_rad.set_xlim([-q_max,0])\n",
-    "ax_snr_analytic_rad.set_ylim([0,1])\n",
     "\n",
+    "# annular SNR radially-averaged\n",
     "ax_snr_annular_rad = fig.add_subplot(gs[1, 4])\n",
     "plot_snr = ax_snr_annular_rad.plot(q_bins_annular_snr,I_bins_annular_snr,color='red')[0]\n",
-    "ax_snr_annular_rad.set_xlim([0,q_max])\n",
-    "ax_snr_annular_rad.set_ylim([0,1])\n",
     "\n",
+    "# remove ticks, add titles to top-row\n",
     "for ax, title in zip(fig.axes[:5],[\"detector geometry\",\"analytical CTF\",\"annular CTF\",\"analytical SNR\",\"annular SNR\"]):\n",
     "    ax.set_xticks([])\n",
     "    ax.set_yticks([])\n",
     "    ax.set_title(title)\n",
     "\n",
+    "# remove y-ticks, add x-label, add vlines to bottom row\n",
     "for index, ax in enumerate(fig.axes[5:]):\n",
     "    ax.set_yticks([])\n",
+    "    ax.set_ylim([0,1])\n",
+    "    ax.set_xlabel(r\"frequency, $q/q_{\\mathrm{probe}}$\")\n",
     "    if index % 2:\n",
+    "        ax.set_xlim([0,q_max])\n",
     "        ax.set_xticks([0,q_probe,q_max])\n",
     "        ax.set_xticklabels([0,1,2])\n",
     "        ax.vlines([q_probe/2,q_probe*1.05,],0,2,colors='k',linestyles='--',linewidth=1,)\n",
     "    else:\n",
+    "        ax.set_xlim([-q_max,0])\n",
     "        ax.set_xticks([-q_max,-q_probe,0])\n",
     "        ax.set_xticklabels([2,1,0])\n",
     "        ax.vlines([-q_probe/2,-q_probe*1.05,],0,2,colors='k',linestyles='--',linewidth=1,)\n",
-    "    ax.set_xlabel(r\"spatial frequency, $q/q_{\\mathrm{probe}}$\")\n",
     "\n",
-    "\n",
+    "# fix ipympl canvas from resizing\n",
     "fig.canvas.resizable = False\n",
     "fig.canvas.header_visible = False\n",
     "fig.canvas.footer_visible = False\n",
     "fig.canvas.toolbar_visible = True\n",
     "fig.canvas.toolbar_position = 'bottom'\n",
     "fig.canvas.layout.width = '675px'\n",
-    "fig.canvas.layout.height = '280px'\n",
+    "fig.canvas.layout.height = '270px'\n",
     "gs.tight_layout(fig)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a2487c59-afe6-4d78-97ea-7479b2b07de3",
+   "metadata": {},
+   "source": [
+    "### Interactive Updating\n",
+    "\n",
+    "We need to update 6 parts of the plot each time we update:\n",
+    "- The virtual masks (`im_detector`)\n",
+    "- The annular CTF (`im_ctf`)\n",
+    "- The annular SNR (`im_snr`)\n",
+    "- The radially-averaged annular CTF (`plot_ctf`)\n",
+    "- The radially-averaged annular SNR (`plot_snr`)\n",
+    "- The vlines on the radially-averaged plots\n",
+    "  - This one doesn't have a single artist we can update. Instead we remove all LineCollections and replot"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 44,
    "id": "d0d505b4",
    "metadata": {},
    "outputs": [],
@@ -424,6 +479,7 @@
     "):\n",
     "    \"\"\" \"\"\"\n",
     "\n",
+    "    # compute new datasets\n",
     "    virtual_masks_annular = annular_segmented_detectors(\n",
     "        gpts=(n,n),\n",
     "        sampling=(sampling,sampling),\n",
@@ -474,13 +530,25 @@
     "            ax.vlines([inner_collection_angle,outer_collection_angle],0,2,colors='k',linestyles='--',linewidth=1,)\n",
     "        else:\n",
     "            ax.vlines([-inner_collection_angle,-outer_collection_angle,],0,2,colors='k',linestyles='--',linewidth=1,)\n",
+    "\n",
+    "    # re-draw figure\n",
     "    fig.canvas.draw_idle()\n",
     "    return None\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d8e72451-61bd-45f2-9dbb-8a916de37db8",
+   "metadata": {},
+   "source": [
+    "## Widget\n",
+    "\n",
+    "We define our 4 sliders, as-well as two callback functions to update the outer collection angle minimum and the meaningful rotation offset range"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 45,
    "id": "68fa9425",
    "metadata": {},
    "outputs": [],
@@ -500,7 +568,7 @@
     "\n",
     "outer_collection_angle_slider = ipywidgets.FloatSlider(\n",
     "    value = q_probe*1.05, \n",
-    "    min = q_probe/10, \n",
+    "    min = q_probe/20, \n",
     "    max = q_max, \n",
     "    step = q_probe/20,\n",
     "    description = r\"Outer collection angle [$q_{\\mathrm{probe}}$]\",\n",
@@ -508,7 +576,10 @@
     ")\n",
     "\n",
     "number_of_segments_slider = ipywidgets.IntSlider(\n",
-    "    value = 4, min = 3, max = 16, step = 1,\n",
+    "    value = 4, \n",
+    "    min = 3, \n",
+    "    max = 16, \n",
+    "    step = 1,\n",
     "    description = \"Number of segments\",\n",
     "    **kwargs\n",
     ")\n",
@@ -525,6 +596,7 @@
     "\n",
     "inner_collection_angle_slider.observe(update_outer_collection_angle, names='value')  \n",
     "\n",
+    "# rotation offset is modulo 180/n\n",
     "def update_rotation_offset_range(change):\n",
     "    value = change['new']\n",
     "    rotation_offset_slider.max = 180/value\n",
@@ -534,14 +606,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 46,
    "id": "b4e23fec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5363c9c2ca5461a9df9c380e2b2ba00",
+       "model_id": "d062d187b12b4213b5b2df71b06ab28d",
        "version_major": 2,
        "version_minor": 0
       },
