update icom figure

--- a/notebooks/01_icom_contrast_transfer.ipynb
+++ b/notebooks/01_icom_contrast_transfer.ipynb
@@ -372,11 +372,11 @@
    "source": [
     "with plt.ioff():\n",
     "    dpi=72\n",
-    "    fig = plt.figure(figsize=(675/dpi,240/dpi),dpi=dpi)\n",
+    "    fig = plt.figure(figsize=(575/dpi,350/dpi),dpi=dpi)\n",
     "\n",
     "# figure layout\n",
-    "gs = GridSpec(2, 5,height_ratios=[3,1],figure=fig)\n",
-    "\n",
+    "gs = GridSpec(2, 4, figure=fig)\n",
+    "#, height_ratios=[3,1]\n",
     "# detector\n",
     "ax_detector = fig.add_subplot(gs[0, 0])\n",
     "im_detector = ax_detector.imshow(ctf.combined_images_rgb(virtual_masks_annular))\n",
@@ -384,57 +384,61 @@
     "\n",
     "# analytic CTF\n",
     "ax_ctf_analytic = fig.add_subplot(gs[0, 1])\n",
-    "ax_ctf_analytic.imshow(ctf.histogram_scaling(np.flip(ctf_analytic[:n//2,:n//2],axis=None),normalize=True),cmap='turbo')\n",
-    "\n",
+    "ax_ctf_analytic.imshow(ctf.histogram_scaling(np.fft.fftshift(ctf_analytic),normalize=True),cmap='turbo')\n",
+    "# [:n//2,:n//2]\n",
     "# annular CTF\n",
     "ax_ctf_annular = fig.add_subplot(gs[0, 2])\n",
-    "im_ctf = ax_ctf_annular.imshow(ctf.histogram_scaling(np.flip(ctf_annular[:n//2,:n//2],axis=0),normalize=True),cmap='turbo')\n",
-    "\n",
-    "# analytic SNR\n",
-    "ax_snr_analytic = fig.add_subplot(gs[0, 3])\n",
-    "ax_snr_analytic.imshow(ctf.histogram_scaling(np.flip((ctf_analytic*inverse_error)[:n//2,:n//2],axis=None),normalize=True),cmap='turbo')\n",
-    "\n",
-    "# annular SNR\n",
-    "ax_snr_annular = fig.add_subplot(gs[0, 4])\n",
-    "im_snr = ax_snr_annular.imshow(ctf.histogram_scaling(np.flip((ctf_annular*inverse_error)[:n//2,:n//2],axis=0),normalize=True),cmap='turbo')\n",
+    "im_ctf = ax_ctf_annular.imshow(ctf.histogram_scaling(np.fft.fftshift(ctf_annular),normalize=True),cmap='turbo')\n",
     "\n",
     "# analytic CTF radially-averaged\n",
-    "ax_ctf_analytic_rad = fig.add_subplot(gs[1, 1])\n",
-    "ax_ctf_analytic_rad.plot(-q_bins_analytic,I_bins_analytic,color='red')\n",
+    "ax_ctf_rad = fig.add_subplot(gs[0, 3])\n",
+    "ax_ctf_rad.plot(q_bins_analytic,I_bins_analytic,color='k')\n",
+    "ax_ctf_rad.plot(q_bins_annular, I_bins_annular, color='tab:green') # [0]\n",
+    "# # annular CTF radially-averaged\n",
+    "# ax_ctf_annular_rad = fig.add_subplot(gs[1, 2])\n",
+    "# plot_ctf = \n",
     "\n",
-    "# annular CTF radially-averaged\n",
-    "ax_ctf_annular_rad = fig.add_subplot(gs[1, 2])\n",
-    "plot_ctf = ax_ctf_annular_rad.plot(q_bins_annular,I_bins_annular,color='red')[0]\n",
+    "# analytic SNR\n",
+    "ax_snr_analytic = fig.add_subplot(gs[1, 1])\n",
+    "ax_snr_analytic.imshow(ctf.histogram_scaling(np.fft.fftshift((ctf_analytic*inverse_error)),normalize=True),cmap='turbo')\n",
+    "\n",
+    "# annular SNR\n",
+    "ax_snr_annular = fig.add_subplot(gs[1, 2])\n",
+    "im_snr = ax_snr_annular.imshow(ctf.histogram_scaling(np.fft.fftshift(ctf_annular*inverse_error),normalize=True),cmap='turbo')\n",
     "\n",
     "# analytic SNR radially-averaged\n",
-    "ax_snr_analytic_rad = fig.add_subplot(gs[1, 3])\n",
-    "ax_snr_analytic_rad.plot(-q_bins_analytic_snr,I_bins_analytic_snr,color='red')\n",
+    "ax_snr_rad = fig.add_subplot(gs[1, 3])\n",
+    "ax_snr_rad.plot(q_bins_analytic_snr,I_bins_analytic_snr,color='k')\n",
+    "ax_snr_rad.plot(q_bins_annular_snr, I_bins_annular_snr, color='tab:green') # [0]\n",
     "\n",
     "# annular SNR radially-averaged\n",
-    "ax_snr_annular_rad = fig.add_subplot(gs[1, 4])\n",
-    "plot_snr = ax_snr_annular_rad.plot(q_bins_annular_snr,I_bins_annular_snr,color='red')[0]\n",
+    "# ax_snr_annular_rad = fig.add_subplot(gs[1, 4])\n",
+    "# plot_snr = ax_snr_annular_rad.plot(q_bins_annular_snr,I_bins_annular_snr,color='red')[0]\n",
     "\n",
-    "# remove ticks, add titles to top-row\n",
-    "for ax, title in zip(fig.axes[:5],[\"detector geometry\",\"analytical CTF\",\"annular CTF\",\"analytical SNR\",\"annular SNR\"]):\n",
+    "# remove ticks, add titles to 2D-plots\n",
+    "for ax, title in zip(\n",
+    "    fig.axes[:3] + fig.axes[4:6],\n",
+    "    [\"detector geometry\",\"analytical CTF\",\"annular CTF\",\"analytical SNR\",\"annular SNR\"]\n",
+    "    ):\n",
     "    ax.set_xticks([])\n",
     "    ax.set_yticks([])\n",
     "    ax.set_title(title)\n",
     "\n",
     "# remove y-ticks, add x-label, add vlines to bottom row\n",
-    "for index, ax in enumerate(fig.axes[5:]):\n",
+    "for index, ax in enumerate(fig.axes[3::3]):\n",
     "    ax.set_yticks([])\n",
     "    ax.set_ylim([0,1])\n",
     "    ax.set_xlabel(r\"frequency, $q/q_{\\mathrm{probe}}$\")\n",
-    "    if index % 2:\n",
-    "        ax.set_xlim([0,q_max])\n",
-    "        ax.set_xticks([0,q_probe,q_max])\n",
-    "        ax.set_xticklabels([0,1,2])\n",
-    "        ax.vlines([q_probe/2,q_probe*1.05,],0,2,colors='k',linestyles='--',linewidth=1,)\n",
-    "    else:\n",
-    "        ax.set_xlim([-q_max,0])\n",
-    "        ax.set_xticks([-q_max,-q_probe,0])\n",
-    "        ax.set_xticklabels([2,1,0])\n",
-    "        ax.vlines([-q_probe/2,-q_probe*1.05,],0,2,colors='k',linestyles='--',linewidth=1,)\n",
+    "#     if index % 2:\n",
+    "    ax.set_xlim([0,q_max])\n",
+    "    ax.set_xticks([0,q_probe,q_max])\n",
+    "    ax.set_xticklabels([0,1,2])\n",
+    "    ax.vlines([q_probe/2,q_probe*1.05,],0,2,colors='k',linestyles='--',linewidth=1,)\n",
+    "    # else:\n",
+    "    #     ax.set_xlim([-q_max,0])\n",
+    "    #     ax.set_xticks([-q_max,-q_probe,0])\n",
+    "    #     ax.set_xticklabels([2,1,0])\n",
+    "    #     ax.vlines([-q_probe/2,-q_probe*1.05,],0,2,colors='k',linestyles='--',linewidth=1,)\n",
     "\n",
     "# fix ipympl canvas from resizing\n",
     "fig.canvas.resizable = False\n",
@@ -442,8 +446,8 @@
     "fig.canvas.footer_visible = False\n",
     "fig.canvas.toolbar_visible = True\n",
     "fig.canvas.toolbar_position = 'bottom'\n",
-    "fig.canvas.layout.width = '675px'\n",
-    "fig.canvas.layout.height = '270px'\n",
+    "fig.canvas.layout.width = '575px'\n",
+    "fig.canvas.layout.height = '400px'\n",
     "gs.tight_layout(fig)"
    ]
   },
@@ -514,8 +518,8 @@
     "\n",
     "    # 2D arrays\n",
     "    im_detector.set_data(ctf.combined_images_rgb(virtual_masks_annular))\n",
-    "    im_ctf.set_data(ctf.histogram_scaling(np.flip(ctf_annular[:n//2,:n//2],axis=0),normalize=True))\n",
-    "    im_snr.set_data(ctf.histogram_scaling(np.flip((ctf_annular*inverse_error)[:n//2,:n//2],axis=0),normalize=True))\n",
+    "    im_ctf.set_data(ctf.histogram_scaling(np.fft.fftshift(ctf_annular),normalize=True))\n",
+    "    im_snr.set_data(ctf.histogram_scaling(np.fft.fftshift(ctf_annular*inverse_error),normalize=True))\n",
     "\n",
     "    # 1D lines\n",
     "    plot_ctf.set_ydata(I_bins_annular)\n",
