updating icom plot layout

--- a/notebooks/01_icom_contrast_transfer.ipynb
+++ b/notebooks/01_icom_contrast_transfer.ipynb
@@ -25,6 +25,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.gridspec import GridSpec\n",
+    "import matplotlib.patches as mpatches\n",
     "import ctf # import custom plotting / utils\n",
     "\n",
     "import ipywidgets\n",
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "419ff450-2a29-4f5e-87a7-5cc70648b4c5",
    "metadata": {},
    "outputs": [],
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "7174d1df-5672-48e9-9930-888ad39078fe",
    "metadata": {},
    "outputs": [],
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "71d0b5b8-198d-4602-9d49-9b01fa5829b9",
    "metadata": {},
    "outputs": [],
@@ -152,15 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2406e188-91b1-4f40-a3e3-8e6a137ddec5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "6d620ca7-35bb-4e1c-b34f-02d6e1906e8f",
    "metadata": {},
    "outputs": [],
@@ -191,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "12634cda",
    "metadata": {},
    "outputs": [],
@@ -269,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "db58b779",
    "metadata": {},
    "outputs": [],
@@ -307,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "21f2b02c-6a5b-49fb-9682-981192798244",
    "metadata": {},
    "outputs": [],
@@ -365,80 +358,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "id": "45f7df1f-47b6-4754-abe3-6196941ec5a9",
    "metadata": {},
    "outputs": [],
    "source": [
     "with plt.ioff():\n",
     "    dpi=72\n",
-    "    fig = plt.figure(figsize=(575/dpi,350/dpi),dpi=dpi)\n",
+    "    fig, axs = plt.subplots(2,4,figsize=(640/dpi,360/dpi),dpi=dpi)\n",
     "\n",
-    "# figure layout\n",
-    "gs = GridSpec(2, 4, figure=fig)\n",
-    "#, height_ratios=[3,1]\n",
+    "# schematic\n",
+    "ax_schematic = axs[0,0]\n",
+    "ax_schematic.imshow(\n",
+    "    np.fft.fftshift(probe_array_fourier),\n",
+    "    cmap='gray',\n",
+    "    extent=[-q_max,q_max,q_max,-q_max]\n",
+    ")\n",
+    "arrow_probe = mpatches.FancyArrowPatch(\n",
+    "    (0,0),\n",
+    "    (np.sqrt(2)*q_probe/2,-np.sqrt(2)*q_probe/2),\n",
+    "    arrowstyle='-|>,head_width=.15',\n",
+    "    mutation_scale=15,\n",
+    "    shrinkA=0,shrinkB=0,\n",
+    "    color='0.5',\n",
+    ")\n",
+    "ax_schematic.add_patch(arrow_probe)\n",
+    "ax_schematic.annotate(r'$q_{\\mathrm{probe}}$',(0.4,0.6),xycoords=arrow_probe,rotation=45,ha='center',va='center',color='0')\n",
+    "\n",
+    "arrow_max = mpatches.FancyArrowPatch(\n",
+    "    (0,0),\n",
+    "    (q_max,0),\n",
+    "    arrowstyle='-|>,head_width=.15',\n",
+    "    mutation_scale=15,\n",
+    "    shrinkA=0,shrinkB=0,\n",
+    "    color='0.5',\n",
+    ")\n",
+    "ax_schematic.add_patch(arrow_max)\n",
+    "ax_schematic.annotate(r'$q_{\\mathrm{max}}$',(0.7,0.5),xycoords=arrow_max,ha='center',va='bottom',color='1')\n",
+    "\n",
     "# detector\n",
-    "ax_detector = fig.add_subplot(gs[0, 0])\n",
+    "ax_detector = axs[1,0]\n",
     "im_detector = ax_detector.imshow(ctf.combined_images_rgb(virtual_masks_annular))\n",
     "ctf.add_scalebar(ax_detector,length=n//4,sampling=reciprocal_sampling,units=r'$q_{\\mathrm{probe}}$')\n",
     "\n",
     "# analytic CTF\n",
-    "ax_ctf_analytic = fig.add_subplot(gs[0, 1])\n",
+    "ax_ctf_analytic = axs[0,1]\n",
     "ax_ctf_analytic.imshow(ctf.histogram_scaling(np.fft.fftshift(ctf_analytic),normalize=True),cmap='turbo')\n",
-    "# [:n//2,:n//2]\n",
+    "\n",
     "# annular CTF\n",
-    "ax_ctf_annular = fig.add_subplot(gs[0, 2])\n",
+    "ax_ctf_annular = axs[0,2]\n",
     "im_ctf = ax_ctf_annular.imshow(ctf.histogram_scaling(np.fft.fftshift(ctf_annular),normalize=True),cmap='turbo')\n",
     "\n",
     "# analytic CTF radially-averaged\n",
-    "ax_ctf_rad = fig.add_subplot(gs[0, 3])\n",
-    "ax_ctf_rad.plot(q_bins_analytic,I_bins_analytic,color='k')\n",
-    "ax_ctf_rad.plot(q_bins_annular, I_bins_annular, color='tab:green') # [0]\n",
-    "# # annular CTF radially-averaged\n",
-    "# ax_ctf_annular_rad = fig.add_subplot(gs[1, 2])\n",
-    "# plot_ctf = \n",
+    "ax_ctf_rad = axs[0,3]\n",
+    "ax_ctf_rad.plot(q_bins_analytic,I_bins_analytic,color='k',label='analytical')\n",
+    "plot_ctf = ax_ctf_rad.plot(q_bins_annular, I_bins_annular, color='tab:green',label='annular')[0]\n",
+    "ax_ctf_rad.legend()\n",
     "\n",
     "# analytic SNR\n",
-    "ax_snr_analytic = fig.add_subplot(gs[1, 1])\n",
+    "ax_snr_analytic = axs[1,1]\n",
     "ax_snr_analytic.imshow(ctf.histogram_scaling(np.fft.fftshift((ctf_analytic*inverse_error)),normalize=True),cmap='turbo')\n",
     "\n",
     "# annular SNR\n",
-    "ax_snr_annular = fig.add_subplot(gs[1, 2])\n",
+    "ax_snr_annular = axs[1,2]\n",
     "im_snr = ax_snr_annular.imshow(ctf.histogram_scaling(np.fft.fftshift(ctf_annular*inverse_error),normalize=True),cmap='turbo')\n",
     "\n",
     "# analytic SNR radially-averaged\n",
-    "ax_snr_rad = fig.add_subplot(gs[1, 3])\n",
+    "ax_snr_rad = axs[1,3]\n",
     "ax_snr_rad.plot(q_bins_analytic_snr,I_bins_analytic_snr,color='k')\n",
-    "ax_snr_rad.plot(q_bins_annular_snr, I_bins_annular_snr, color='tab:green') # [0]\n",
-    "\n",
-    "# annular SNR radially-averaged\n",
-    "# ax_snr_annular_rad = fig.add_subplot(gs[1, 4])\n",
-    "# plot_snr = ax_snr_annular_rad.plot(q_bins_annular_snr,I_bins_annular_snr,color='red')[0]\n",
+    "plot_snr = ax_snr_rad.plot(q_bins_annular_snr, I_bins_annular_snr, color='tab:green')[0]\n",
     "\n",
     "# remove ticks, add titles to 2D-plots\n",
     "for ax, title in zip(\n",
-    "    fig.axes[:3] + fig.axes[4:6],\n",
-    "    [\"detector geometry\",\"analytical CTF\",\"annular CTF\",\"analytical SNR\",\"annular SNR\"]\n",
-    "    ):\n",
+    "    axs.T.flatten(),\n",
+    "    [\n",
+    "        \"schematic\",\n",
+    "        \"detector geometry\",\n",
+    "        \"analytical CTF\",\n",
+    "        \"analytical SNR\",\n",
+    "        \"annular CTF\",\n",
+    "        \"annular SNR\",\n",
+    "        \"radially averaged CTFs\",\n",
+    "        \"radially averaged SNRs\"\n",
+    "    ]\n",
+    "):\n",
     "    ax.set_xticks([])\n",
     "    ax.set_yticks([])\n",
     "    ax.set_title(title)\n",
     "\n",
+    "for ax in axs[:,1:3].flatten():\n",
+    "    ctf.add_scalebar(ax,length=n//4,sampling=reciprocal_sampling,units=r'$q_{\\mathrm{probe}}$')\n",
+    "\n",
     "# remove y-ticks, add x-label, add vlines to bottom row\n",
-    "for index, ax in enumerate(fig.axes[3::3]):\n",
-    "    ax.set_yticks([])\n",
+    "for ax in axs[:,3]:\n",
     "    ax.set_ylim([0,1])\n",
-    "    ax.set_xlabel(r\"frequency, $q/q_{\\mathrm{probe}}$\")\n",
-    "#     if index % 2:\n",
     "    ax.set_xlim([0,q_max])\n",
-    "    ax.set_xticks([0,q_probe,q_max])\n",
-    "    ax.set_xticklabels([0,1,2])\n",
-    "    ax.vlines([q_probe/2,q_probe*1.05,],0,2,colors='k',linestyles='--',linewidth=1,)\n",
-    "    # else:\n",
-    "    #     ax.set_xlim([-q_max,0])\n",
-    "    #     ax.set_xticks([-q_max,-q_probe,0])\n",
-    "    #     ax.set_xticklabels([2,1,0])\n",
-    "    #     ax.vlines([-q_probe/2,-q_probe*1.05,],0,2,colors='k',linestyles='--',linewidth=1,)\n",
+    "    ax.vlines([q_probe/2,q_probe*1.05],0,2,colors='k',linestyles='--',linewidth=1,)\n",
+    "\n",
+    "ax_snr_rad.set_xticks([0,q_probe,q_max])\n",
+    "ax_snr_rad.set_xticklabels([0,1,2])\n",
+    "ax_snr_rad.set_xlabel(r\"spatial frequency, $q/q_{\\mathrm{probe}}$\")\n",
     "\n",
     "# fix ipympl canvas from resizing\n",
     "fig.canvas.resizable = False\n",
@@ -446,9 +465,10 @@
     "fig.canvas.footer_visible = False\n",
     "fig.canvas.toolbar_visible = True\n",
     "fig.canvas.toolbar_position = 'bottom'\n",
-    "fig.canvas.layout.width = '575px'\n",
-    "fig.canvas.layout.height = '400px'\n",
-    "gs.tight_layout(fig)"
+    "fig.canvas.layout.width = '640px'\n",
+    "fig.canvas.layout.height = '385px'\n",
+    "fig.tight_layout()\n",
+    "# fig"
    ]
   },
   {
@@ -470,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "id": "d0d505b4",
    "metadata": {},
    "outputs": [],
@@ -526,14 +546,9 @@
     "    plot_snr.set_ydata(I_bins_annular_snr)\n",
     "\n",
     "    # collections (vlines)\n",
-    "    for index, ax in enumerate(fig.axes[5:]):\n",
-    "        # remove old vlines\n",
+    "    for ax in axs[:,3]:\n",
     "        ax.collections[0].remove()\n",
-    "        # add lines\n",
-    "        if index % 2:\n",
-    "            ax.vlines([inner_collection_angle,outer_collection_angle],0,2,colors='k',linestyles='--',linewidth=1,)\n",
-    "        else:\n",
-    "            ax.vlines([-inner_collection_angle,-outer_collection_angle,],0,2,colors='k',linestyles='--',linewidth=1,)\n",
+    "        ax.vlines([inner_collection_angle,outer_collection_angle],0,2,colors='k',linestyles='--',linewidth=1,)\n",
     "\n",
     "    # re-draw figure\n",
     "    fig.canvas.draw_idle()\n",
@@ -552,13 +567,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "id": "68fa9425",
    "metadata": {},
    "outputs": [],
    "source": [
     "style = {'description_width': 'initial'}\n",
-    "layout = ipywidgets.Layout(width=\"340px\",height=\"30px\")\n",
+    "layout = ipywidgets.Layout(width=\"320px\",height=\"30px\")\n",
     "kwargs = {'style':style,'layout':layout,'continuous_update':False}\n",
     "\n",
     "inner_collection_angle_slider = ipywidgets.FloatSlider(\n",
@@ -566,7 +581,7 @@
     "    min = 0,\n",
     "    max = q_probe, \n",
     "    step = q_probe/20,\n",
-    "    description = r\"Inner collection angle [$q_{\\mathrm{probe}}$]\",\n",
+    "    description = r\"inner collection angle [$q_{\\mathrm{probe}}$]\",\n",
     "    **kwargs\n",
     ")\n",
     "\n",
@@ -575,7 +590,7 @@
     "    min = q_probe/20, \n",
     "    max = q_max, \n",
     "    step = q_probe/20,\n",
-    "    description = r\"Outer collection angle [$q_{\\mathrm{probe}}$]\",\n",
+    "    description = r\"outer collection angle [$q_{\\mathrm{probe}}$]\",\n",
     "    **kwargs\n",
     ")\n",
     "\n",
@@ -584,13 +599,13 @@
     "    min = 3, \n",
     "    max = 16, \n",
     "    step = 1,\n",
-    "    description = \"Number of segments\",\n",
+    "    description = \"number of segments\",\n",
     "    **kwargs\n",
     ")\n",
     "\n",
     "rotation_offset_slider = ipywidgets.IntSlider(\n",
     "    value = 0, min = 0, max = 180/4, step = 1,\n",
-    "    description = \"Rotation offset [°]\",\n",
+    "    description = \"rotation offset [°]\",\n",
     "    **kwargs\n",
     ")\n",
     "\n",
@@ -610,19 +625,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "id": "b4e23fec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d062d187b12b4213b5b2df71b06ab28d",
+       "model_id": "42a641747a184b109f98ce0bf964dd90",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(VBox(children=(HBox(children=(FloatSlider(value=0.5, continuous_update=False, description='Inne…"
+       "VBox(children=(VBox(children=(HBox(children=(FloatSlider(value=0.5, continuous_update=False, description='inne…"
       ]
      },
      "metadata": {},
@@ -682,7 +697,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
