fix virtual detector bug with defocus

--- a/notebooks/03_ssb_contrast_transfer.ipynb
+++ b/notebooks/03_ssb_contrast_transfer.ipynb
@@ -186,8 +186,8 @@
     "\n",
     "intensities = [\n",
     "    simulate_intensities(\n",
-    "        defocus=0.0,\n",
-    "        use_soft_aperture=True\n",
+    "        defocus=0,\n",
+    "        use_soft_aperture=False\n",
     "    )\n",
     "]\n",
     "intensities_FFT = [np.fft.fft2(intensities[0],axes=(0,1))]"
@@ -239,10 +239,27 @@
     "\n",
     "    for mask in masks:\n",
     "        val = np.sum(corner_centered_intensities * mask,axis=(-1,-2)) / np.sum(mask)\n",
-    "        intensities[:,:,mask] = val[:,:,None]\n",
-    "    intensities[:,:,inverse_mask] = 0.0 \n",
+    "        intensities[...,mask] = val[...,None]\n",
+    "    intensities[...,inverse_mask] = 0.0 \n",
     "\n",
-    "    return intensities"
+    "    return intensities\n",
+    "\n",
+    "\n",
+    "def mask_gamma_using_virtual_detectors(\n",
+    "    corner_centered_gamma,\n",
+    "    center_centered_masks,\n",
+    "): \n",
+    "    \"\"\" \"\"\"\n",
+    "    \n",
+    "    masks = np.fft.ifftshift(np.asarray(center_centered_masks).astype(np.bool_),axes=(-1,-2))\n",
+    "    inverse_mask = (1-masks.sum(0)).astype(np.bool_)\n",
+    "\n",
+    "    for mask in masks:\n",
+    "        val = np.sum(corner_centered_gamma * mask) / np.sum(mask)\n",
+    "        corner_centered_gamma[mask] = val\n",
+    "    corner_centered_gamma[inverse_mask] = 0.0 \n",
+    "\n",
+    "    return corner_centered_gamma"
    ]
   },
   {
@@ -278,11 +295,13 @@
    "source": [
     "def ptychography_reconstruction(\n",
     "    masked_intensities_FFT,\n",
+    "    virtual_masks_annular,\n",
     "    defocus,\n",
     "    use_soft_aperture,\n",
     "    intensities_FFT=None,\n",
     "): \n",
     "    aperture = soft_aperture if use_soft_aperture else hard_aperture\n",
+    "    threshold = 1e-3 if use_soft_aperture else 0.0\n",
     "    psi = np.empty_like(complex_obj)\n",
     "    \n",
     "    if intensities_FFT is not None:\n",
@@ -309,11 +328,18 @@
     "                A_q_minus_Q = aperture(q_minus_Q,q_probe,reciprocal_sampling) * np.exp(-1j*np.pi*wavelength*defocus*q_minus_Q**2)\n",
     "    \n",
     "                gamma = A_q_conj * A_q_minus_Q - A_q * A_q_plus_Q.conj()\n",
-    "                gamma_abs = np.abs(gamma)\n",
-    "                gamma_ind = gamma_abs > 1e-3 if use_soft_aperture else 0.0\n",
-    "                psi[ind_x,ind_y] = (G[gamma_ind] *  np.conj(gamma[gamma_ind])/gamma_abs[gamma_ind]).sum()\n",
     "                if intensities_FFT is not None:\n",
+    "                    gamma_abs = np.abs(gamma)\n",
+    "                    gamma_ind = gamma_abs > threshold\n",
     "                    psi_0[ind_x,ind_y] = (G_0[gamma_ind] *  np.conj(gamma[gamma_ind])/gamma_abs[gamma_ind]).sum()\n",
+    "                    \n",
+    "                gamma = mask_gamma_using_virtual_detectors(\n",
+    "                    gamma,\n",
+    "                    virtual_masks_annular,\n",
+    "                )\n",
+    "                gamma_abs = np.abs(gamma)\n",
+    "                gamma_ind = gamma_abs > threshold\n",
+    "                psi[ind_x,ind_y] = (G[gamma_ind] *  np.conj(gamma[gamma_ind])/gamma_abs[gamma_ind]).sum()\n",
     "\n",
     "    return_val = (np.fft.ifft2(psi),None) if intensities_FFT is None else (np.fft.ifft2(psi),np.fft.ifft2(psi_0))\n",
     "    return return_val"
@@ -328,8 +354,9 @@
    "source": [
     "recon, recon_0 = ptychography_reconstruction(\n",
     "    masked_intensities_FFT[0],\n",
-    "    defocus=0.0,\n",
-    "    use_soft_aperture=True,\n",
+    "    virtual_masks_annular[0],\n",
+    "    defocus=0,\n",
+    "    use_soft_aperture=False,\n",
     "    intensities_FFT=intensities_FFT[0]\n",
     ")"
    ]
@@ -405,7 +432,8 @@
     "\n",
     "ax_ctf = axs[2]\n",
     "im_ctf = ax_ctf.imshow(\n",
-    "    ctf.histogram_scaling(np.fft.fftshift(numeric_ctf),normalize=True)\n",
+    "    ctf.histogram_scaling(np.fft.fftshift(numeric_ctf),normalize=True),\n",
+    "    cmap='turbo'\n",
     ")\n",
     "\n",
     "ax_ctf_rad = axs[3]\n",
@@ -503,7 +531,7 @@
     ")\n",
     "\n",
     "soft_aperture_toggle = ipywidgets.ToggleButton(\n",
-    "    value=True,\n",
+    "    value=False,\n",
     "    description='use soft aperture',\n",
     "    **kwargs\n",
     ")\n",
@@ -538,7 +566,7 @@
     "\n",
     "def simulate_wrapper(*args):\n",
     "    disable_all(True)\n",
-    "    update_pixelated_trotters(\n",
+    "    simulate_and_update_trotters(\n",
     "        defocus_slider.value,\n",
     "        soft_aperture_toggle.value,\n",
     "    )\n",
@@ -552,23 +580,7 @@
     "        soft_aperture_toggle.value,\n",
     "    )\n",
     "    disable_all(False)\n",
-    "reconstruct_button.on_click(reconstruct_wrapper)\n",
-    "\n",
-    "# def click_wrapper(*args):\n",
-    "#     \"\"\" \"\"\"\n",
-    "#     disable_all(True)\n",
-    "#     compute_updates(\n",
-    "#         inner_collection_angle_slider.value,\n",
-    "#         outer_collection_angle_slider.value,\n",
-    "#         number_of_segments_slider.value,\n",
-    "#         rotation_offset_slider.value,\n",
-    "#         batch_size=batch_size_slider.value,\n",
-    "#         iterations=iterations_slider.value,\n",
-    "#         pbar=pbar,\n",
-    "#     )\n",
-    "#     disable_all(False)\n",
-    "\n",
-    "# iterate_button.on_click(click_wrapper)\n"
+    "reconstruct_button.on_click(reconstruct_wrapper)\n"
    ]
   },
   {
@@ -578,7 +590,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def update_pixelated_trotters(\n",
+    "def simulate_and_update_trotters(\n",
     "    defocus,\n",
     "    use_soft_aperture,\n",
     "):\n",
@@ -591,25 +603,7 @@
     "\n",
     "    ind = n//12 if frequencies_toggle.value == 'show low freq trotter' else n//8\n",
     "    \n",
-    "    im_trotter_pixelated.set_data(\n",
-    "        np.dstack(\n",
-    "            (\n",
-    "                ctf.complex_to_rgb(\n",
-    "                    np.fft.fftshift(intensities_FFT[0][ind,2*ind])\n",
-    "                ),\n",
-    "                mask_opacities(virtual_masks_annular[0])\n",
-    "            )\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "    fig.canvas.draw()    \n",
-    "\n",
-    "    update_virtual_trotters(\n",
-    "        inner_collection_angle_slider.value,\n",
-    "        outer_collection_angle_slider.value,\n",
-    "        number_of_segments_slider.value,\n",
-    "        rotation_offset_slider.value\n",
-    "    )\n",
+    "    update_virtual_and_pixelated_trotters(\"dummy\")\n",
     "\n",
     "    update_ctfs(\n",
     "        defocus,\n",
@@ -636,6 +630,7 @@
     "\n",
     "    recon,recon_0 = ptychography_reconstruction(\n",
     "        masked_intensities_FFT[0],\n",
+    "        virtual_masks_annular[0],\n",
     "        defocus=defocus,\n",
     "        use_soft_aperture=use_soft_aperture,\n",
     "        intensities_FFT=intensities_FFT,\n",
@@ -673,39 +668,20 @@
    "execution_count": 16,
    "id": "4f1b0d36-99e8-4384-9f56-405e96bf896f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8b7f752a9ea448da3fb00e84774345e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def update_virtual_trotters(\n",
-    "    inner_collection_angle,\n",
-    "    outer_collection_angle,\n",
-    "    number_of_segments,\n",
-    "    rotation_offset,\n",
+    "def update_virtual_and_pixelated_trotters(\n",
+    "    *args\n",
     "):\n",
     "    \"\"\" \"\"\"\n",
     "    # compute new datasets\n",
     "    virtual_masks_annular[0] = annular_segmented_detectors(\n",
     "        gpts=(n,n),\n",
     "        sampling=(sampling,sampling),\n",
-    "        n_angular_bins=number_of_segments,\n",
-    "        inner_radius=inner_collection_angle,\n",
-    "        outer_radius=outer_collection_angle,\n",
-    "        rotation_offset=np.deg2rad(rotation_offset),\n",
+    "        n_angular_bins=number_of_segments_slider.value,\n",
+    "        inner_radius=inner_collection_angle_slider.value,\n",
+    "        outer_radius=outer_collection_angle_slider.value,\n",
+    "        rotation_offset=np.deg2rad(rotation_offset_slider.value),\n",
     "    )\n",
     "    \n",
     "    masked_intensities = mask_intensities_using_virtual_detectors(\n",
@@ -716,6 +692,17 @@
     "    masked_intensities_FFT[0] = np.fft.fft2(masked_intensities,axes=(0,1))\n",
     "\n",
     "    ind = n//12 if frequencies_toggle.value == 'show low freq trotter' else n//8\n",
+    "\n",
+    "    im_trotter_pixelated.set_data(\n",
+    "        np.dstack(\n",
+    "            (\n",
+    "                ctf.complex_to_rgb(\n",
+    "                    np.fft.fftshift(intensities_FFT[0][ind,2*ind])\n",
+    "                ),\n",
+    "                mask_opacities(virtual_masks_annular[0])\n",
+    "            )\n",
+    "        )\n",
+    "    )\n",
     "    \n",
     "    im_trotter_annular.set_data(\n",
     "        ctf.complex_to_rgb(\n",
@@ -726,15 +713,10 @@
     "    fig.canvas.draw()\n",
     "    return None\n",
     "\n",
-    "ipywidgets.interactive_output(\n",
-    "    update_virtual_trotters,\n",
-    "    {\n",
-    "        'inner_collection_angle': inner_collection_angle_slider,\n",
-    "        'outer_collection_angle': outer_collection_angle_slider,\n",
-    "        'number_of_segments': number_of_segments_slider,\n",
-    "        'rotation_offset': rotation_offset_slider,\n",
-    "    }\n",
-    ")"
+    "inner_collection_angle_slider.observe(update_virtual_and_pixelated_trotters,names='value')\n",
+    "outer_collection_angle_slider.observe(update_virtual_and_pixelated_trotters,names='value')\n",
+    "number_of_segments_slider.observe(update_virtual_and_pixelated_trotters,names='value')\n",
+    "rotation_offset_slider.observe(update_virtual_and_pixelated_trotters,names='value')"
    ]
   },
   {
@@ -744,7 +726,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def update_trotters(*args):\n",
+    "def update_trotters_frequency(*args):\n",
     "    \n",
     "    ind = n//12 if frequencies_toggle.value == 'show low freq trotter' else n//8\n",
     "    \n",
@@ -768,24 +750,24 @@
     "    fig.canvas.draw()    \n",
     "    return None\n",
     "\n",
-    "frequencies_toggle.observe(update_trotters)"
+    "frequencies_toggle.observe(update_trotters_frequency,'value')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "4841e37d-e983-4204-ba48-f56099a1647f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d4e57df656d432bb79a04c3f29dc72d",
+       "model_id": "2e36a428daf6465c9f1e841fb3590d6e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(VBox(children=(HBox(children=(IntSlider(value=24, continuous_update=False, description='defocus…"
+       "VBox(children=(VBox(children=(HBox(children=(IntSlider(value=0, continuous_update=False, description='defocus …"
       ]
      },
      "metadata": {},
@@ -872,14 +854,6 @@
     "# psi[0,0] = np.abs(intensities_FFT[0,0]).sum()\n",
     "# recon = np.fft.ifft2(psi)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5be458a-afe7-4a26-b644-c8312ed3cc52",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
