--- a/notebooks/02_ptycho_contrast_transfer.ipynb
+++ b/notebooks/02_ptycho_contrast_transfer.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "12634cda",
    "metadata": {},
    "outputs": [],
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "7ba8d4e6-6bf2-4f32-ad29-87d6ffb71444",
    "metadata": {},
    "outputs": [],
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "1571ad13-e05c-4f10-bf48-c403dc690d00",
    "metadata": {},
    "outputs": [],
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "16571668-958d-4fe6-bb5f-cef819ebd920",
    "metadata": {},
    "outputs": [],
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "95b1a1e1-6381-4554-b108-84fb91ab5566",
    "metadata": {},
    "outputs": [],
@@ -700,6 +700,16 @@
     "    **kwargs\n",
     ")\n",
     "\n",
+    "m = n**2\n",
+    "batch_sizes = m/(np.arange(m)+1)\n",
+    "batch_sizes = np.where(np.mod(batch_sizes, 1, out=batch_sizes)==0)[0]+1\n",
+    "batch_size_slider = ipywidgets.SelectionSlider(\n",
+    "    options=batch_sizes,\n",
+    "    value=batch_sizes[-4],\n",
+    "    description= \"batch size\",\n",
+    "    **kwargs\n",
+    ")\n",
+    "\n",
     "iterations_slider = ipywidgets.IntSlider(\n",
     "    value = 8, min = 1, max = 16, step = 1,\n",
     "    description = \"iterations\",\n",
@@ -755,14 +765,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
+   "id": "c97cd109-fe13-4713-a379-c7323afe9bc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "538411b800f041a2967c9ace288a033f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "SelectionSlider(continuous_update=False, description='batch size', index=29, layout=Layout(height='30px', widt…"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "f19ee7c1-267b-42b6-b814-4a1a047f3d65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(3072)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch_sizes[-3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "f9c3f4ca-1d26-4651-a971-2ba92b774b45",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a8ff731488c4ea8b66f33e3769bd7d2",
+       "model_id": "70eacd22a5df4e46ad2a42c46ddd8db0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -794,6 +849,14 @@
     "    )\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "799dc8e3-a3a3-4c2e-aca4-8060de23ac15",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -812,7 +875,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
