made icom inside ptycho widget plot immediately

--- a/notebooks/02_ptycho_contrast_transfer.ipynb
+++ b/notebooks/02_ptycho_contrast_transfer.ipynb
@@ -532,47 +532,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "36a9ff9c-ce2c-47a4-869c-ca6ce2ef80a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def update_remaining_figure(\n",
-    "    inner_collection_angle,\n",
-    "    outer_collection_angle,\n",
-    "    virtual_masks_annular,\n",
-    "    icom,\n",
-    "):\n",
-    "    \"\"\" \"\"\"\n",
-    "    ctf_dpc = ctf.compute_ctf(icom)\n",
-    "    _, I_bins_dpc = ctf.radially_average_ctf(\n",
-    "        ctf_dpc,\n",
-    "        (sampling,sampling)\n",
-    "    )\n",
-    "\n",
-    "    # 2D data\n",
-    "    im_detector.set_data(ctf.combined_images_rgb(virtual_masks_annular))\n",
-    "    im_ctf_dpc.set_data(\n",
-    "        ctf.histogram_scaling(\n",
-    "            np.fft.fftshift(ctf_dpc),\n",
-    "            normalize=True\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "    # 1D lines\n",
-    "    plot_ctf_dpc.set_ydata(I_bins_dpc)\n",
-    "\n",
-    "    # collections (vlines)\n",
-    "    ax_ctf_rad.collections[0].remove()\n",
-    "    ax_ctf_rad.vlines([inner_collection_angle,outer_collection_angle],0,2,colors='k',linestyles='--',linewidth=1,)\n",
-    "\n",
-    "    # re-draw figure\n",
-    "    fig.canvas.draw()\n",
-    "    return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
    "id": "80821142-9b72-4a66-a841-da4d439ea99e",
    "metadata": {},
    "outputs": [],
@@ -638,10 +597,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "95b1a1e1-6381-4554-b108-84fb91ab5566",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3cbd8007045b4fc09a7d9e5fdfcdfef3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "style = {'description_width': 'initial'}\n",
     "layout = ipywidgets.Layout(width=\"320px\",height=\"30px\")\n",
@@ -705,7 +680,7 @@
     "batch_sizes = np.where(np.mod(batch_sizes, 1, out=batch_sizes)==0)[0]+1\n",
     "batch_size_slider = ipywidgets.SelectionSlider(\n",
     "    options=batch_sizes,\n",
-    "    value=batch_sizes[-4],\n",
+    "    value=batch_sizes[-7],\n",
     "    description= \"batch size\",\n",
     "    **kwargs\n",
     ")\n",
@@ -759,53 +734,18 @@
     "    disable_all(False)\n",
     "\n",
     "iterate_button.on_click(click_wrapper)\n",
+    "pbar = tqdm(total=8,display=False,ncols=300)\n",
     "\n",
-    "pbar = tqdm(total=8,display=False,ncols=300)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "c97cd109-fe13-4713-a379-c7323afe9bc4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "538411b800f041a2967c9ace288a033f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "SelectionSlider(continuous_update=False, description='batch size', index=29, layout=Layout(height='30px', widt…"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "f19ee7c1-267b-42b6-b814-4a1a047f3d65",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.int64(3072)"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "batch_sizes[-3]"
+    "\n",
+    "ipywidgets.interactive_output(\n",
+    "    compute_icom,\n",
+    "    {\n",
+    "        'inner_collection_angle':inner_collection_angle_slider,\n",
+    "        'outer_collection_angle':outer_collection_angle_slider,\n",
+    "        'number_of_segments':number_of_segments_slider,\n",
+    "        'rotation_offset':rotation_offset_slider,\n",
+    "    }\n",
+    ")"
    ]
   },
   {
@@ -817,7 +757,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70eacd22a5df4e46ad2a42c46ddd8db0",
+       "model_id": "dc044fb33d8441a6933885f7f826791f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -849,14 +789,6 @@
     "    )\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "799dc8e3-a3a3-4c2e-aca4-8060de23ac15",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
